--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Become a Data Visualization Ninja"
-subtitle: "⚔<br/>What the academic fellow needs to know"
+subtitle: "⚔<br/>What the academic fellow and resident needs to know"
 author: "Anton S. Becker, M.D., Ph.D."
-institute: "Department of Radiology"
-date: "2020/12/10 (updated: `r Sys.Date()`)"
+institute: "Director of Analytics, Body Service, Department of Radiology"
+date: "2021/12/23 (updated: `r Sys.Date()`)"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -27,6 +27,7 @@ output:
 source("setup.R")$value
 library(xaringanExtra)
 library(tidyverse)
+library(here)
 library(magrittr)
 library(knitr)
 library(ggplot2)
@@ -294,6 +295,73 @@ class: center, bottom, inverse
 
 ---
 
+# Overview: Plot Types
+
+![:col_row Histogram, Scatter plot, Boxplot, Line chart]
+![:col_list One numeric, Two Numeric, Numeric/Categorical, Numeric/Ordinal]
+
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+qplot(x = C$x, geom = "histogram") +
+  theme_minimal()
+```
+&nbsp;&nbsp;&nbsp;
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+qplot(x = C$x, y = C$y, geom = "point") +
+  theme_minimal()
+```
+&nbsp;&nbsp;&nbsp;
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+bind_rows(A, B, C) %>% mutate(Set = as.factor(Set)) %>% 
+qplot(x = Set, y = x, geom = "boxplot", data = .) +
+  theme_minimal()
+```
+&nbsp;&nbsp;&nbsp;
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+bone_tumors %>% filter(tumor == "Osteosarcoma") %>% 
+qplot(x = decade, y = percent, geom = "line", data = .) +
+  theme_minimal()
+```
+--
+
+![:col_row Density plot, Scatter with marginal plot, Violin plot, Area plots]
+
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+qplot(x = C$x, geom = "density") +
+  theme_minimal()
+```
+&nbsp;&nbsp;&nbsp;
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+qplot(x = C$x, y = C$y, geom = "point") +
+  theme_minimal() -> fig_marginal
+
+ggExtra::ggMarginal(fig_marginal, type="histogram")
+```
+&nbsp;&nbsp;&nbsp;
+```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
+bind_rows(A, B, C) %>% mutate(Set = as.factor(Set)) %>% 
+qplot(x = Set, y = x, geom = "violin", data = .) +
+  theme_minimal()
+```
+&nbsp;&nbsp;&nbsp;
+```{r, echo=FALSE, message=FALSE, fig.width=4, fig.height=2.5}
+qplot(x = decade, y = percent, fill = tumor, geom = "area", data = filter(bone_tumors, dign=="malignant")) +
+  theme_minimal() +
+  scale_fill_brewer()
+```
+
+---
+
+# Overview: Plot Types
+
+<iframe src="https://www.data-to-viz.com/#explore" width="100%" height="500px" frameBorder="0">![Screenshot of interactive graph on data-to-viz.com](img/data-to-viz.png)</iframe>
+
+.footnote[
+Interactive graph on [data-to-viz.com](https://www.data-to-viz.com/)
+]
+
+
+---
+
 # Case study: Barchart
 
 <img src="img/bone_tumors_0.png", alt="Bone tumor incidence over life decades from Freyschmidt (2010), p.12", style="width:500px; display:block; margin-left: auto; margin-right: auto;
@@ -458,72 +526,6 @@ fig_bone_final
 </div>
 
 ---
-
-# Overview: Plot Types
-
-![:col_row Histogram, Scatter plot, Boxplot, Line chart]
-![:col_list One numeric, Two Numeric, Numeric/Categorical, Numeric/Ordinal]
-
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-qplot(x = C$x, geom = "histogram") +
-  theme_minimal()
-```
-&nbsp;&nbsp;&nbsp;
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-qplot(x = C$x, y = C$y, geom = "point") +
-  theme_minimal()
-```
-&nbsp;&nbsp;&nbsp;
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-bind_rows(A, B, C) %>% mutate(Set = as.factor(Set)) %>% 
-qplot(x = Set, y = x, geom = "boxplot", data = .) +
-  theme_minimal()
-```
-&nbsp;&nbsp;&nbsp;
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-bone_tumors %>% filter(tumor == "Osteosarcoma") %>% 
-qplot(x = decade, y = percent, geom = "line", data = .) +
-  theme_minimal()
-```
---
-
-![:col_row Density plot, Scatter with marginal plot, Violin plot, Area plots]
-
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-qplot(x = C$x, geom = "density") +
-  theme_minimal()
-```
-&nbsp;&nbsp;&nbsp;
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-qplot(x = C$x, y = C$y, geom = "point") +
-  theme_minimal() -> fig_marginal
-
-ggExtra::ggMarginal(fig_marginal, type="histogram")
-```
-&nbsp;&nbsp;&nbsp;
-```{r, echo=FALSE, message=FALSE, fig.width=3, fig.height=2.5}
-bind_rows(A, B, C) %>% mutate(Set = as.factor(Set)) %>% 
-qplot(x = Set, y = x, geom = "violin", data = .) +
-  theme_minimal()
-```
-&nbsp;&nbsp;&nbsp;
-```{r, echo=FALSE, message=FALSE, fig.width=4, fig.height=2.5}
-qplot(x = decade, y = percent, fill = tumor, geom = "area", data = filter(bone_tumors, dign=="malignant")) +
-  theme_minimal() +
-  scale_fill_brewer()
-```
-
----
-
-# Overview: Plot Types
-
-<iframe src="https://www.data-to-viz.com/#explore" width="100%" height="500px" frameBorder="0">![Screenshot of interactive graph on data-to-viz.com](img/data-to-viz.png)</iframe>
-
-.footnote[
-Interactive graph on [data-to-viz.com](https://www.data-to-viz.com/)
-]
-
----
 background-image: url(img/map_engelberg.png)
 background-size: cover
 class: inverse, bottom, center
@@ -631,7 +633,402 @@ Paul Klee
 ]
 
 ---
+class: animated fadeIn
 
+# Case Study: Color
+
+.center[
+![Bar chart blood loss predicts survival](img/blood_loss_raw.jpeg)
+
+Figure 5 from Katz SC et al., Operative Blood Loss <br />
+Independently Predicts Recurrence and Survival After Resection <br />of Hepatocellular Carcinoma, Ann Surg 2009;249: 617–623
+
+]
+---
+class: animated fadeIn
+
+# Case Study: Color
+
+.center[
+
+```{r, echo=FALSE, fig.width=8, fig.height=6}
+# Estimate data from Figure in the absence of raw data
+bloodloss_fig_estimate <- data.frame(
+  n = c(80, 42, 25, 14, 31),
+  bl_est = factor(x = 1:5, labels = c("<500 ml", "501 - 1000 ml", "1001-1500 ml", "1501 - 2000 ml", ">2000 ml"), ordered = TRUE),
+  bl_point = c(250, 750, 1250, 1750, 2250),
+  mean_surv = c(82, 72, 37, 30, 19)
+)
+
+first_bl <- ggplot(data = bloodloss_fig_estimate, aes(x = bl_est, y = mean_surv)) +
+  geom_bar(stat = "identity", fill = "black") +
+  theme_minimal() +
+  labs(y = "Months", x = "EBL")
+
+first_bl
+```
+
+
+modified after Katz SC et al., Ann Surg 2009;249: 617–623
+
+]
+
+---
+class: animated rollIn
+
+# Case Study: Color
+
+.center[
+
+```{r, echo=FALSE, fig.width=8, fig.height=6}
+
+ggplot(data = bloodloss_fig_estimate, aes(x = mean_surv, y = bl_est)) +
+  geom_bar(stat = "identity", fill = "black") +
+  theme_minimal() +
+  labs(x = "Months", y = "EBL")
+  
+```
+
+modified after Katz SC et al., Ann Surg 2009;249: 617–623
+
+]
+---
+class: animated rollIn
+
+# Case Study: Color
+
+.center[
+
+```{r, echo=FALSE, fig.width=8, fig.height=6}
+blood_red <- "#8A0707"
+
+ggplot(data = bloodloss_fig_estimate, aes(x = mean_surv, y = bl_point)) +
+  geom_bar(stat = "identity", fill = blood_red) +
+  scale_y_continuous(labels = function(x) paste0(x, " mL")) +
+  scale_x_continuous(position = "top") +
+  theme_minimal() +
+  labs(x = "Months", y = "EBL")
+  
+```
+
+modified after Katz SC et al., Ann Surg 2009;249: 617–623
+
+]
+
+---
+class: animated fadeIn
+
+# Case Study: Color
+
+```{r, echo=FALSE, fig.align='center', fig.width=8, fig.height=6}
+# Raw data thanks to @gonen_mithat
+bloodloss <- here("docs", "bloodloss.csv") %>% read_csv()
+
+fig_bl <- ggplot(data = bloodloss, aes(x = surv_time, y = bloodloss)) +
+  geom_bar(stat = "identity", fill = blood_red) +
+  scale_y_reverse(labels = function(x) paste0(x, " mL")) +
+  scale_x_continuous(position = "top", labels = function(x) paste0(x, " months")) +
+  theme_minimal() +
+  labs(x = "", y = "")
+
+fig_bl
+```
+
+---
+class: animated fadeIn
+
+# Case Study: Color
+
+.center[
+
+```{r, echo=FALSE, fig.width=8, fig.height=6}
+fig_bl <- fig_bl +
+  geom_richtext(
+    data = data.frame(
+      surv_time = 150,  # X
+      bloodloss = 10000,# and Y coordinates of text
+      label = glue::glue("<span style='font-size:24pt'><span style='color:{blood_red}'>&darr; Large blood loss volume</span><br /> &larr; predicts shorter survival.</span>")
+    ),
+    aes(label = label),
+    fill = NA, label.colour = NA
+  )
+fig_bl
+```
+
+]
+
+---
+class: animated fadeIn
+
+# Case Study: Color
+
+.pull-left[
+```{r, echo=FALSE, fig.width=8, fig.height=6}
+fig_bl
+```
+Data courtesy of Dr. Mithat Gönen, MSKCC
+]
+.pull-right[
+```{r, echo=FALSE, fig.width=8, fig.height=6}
+first_bl
+```
+Modified after Katz SC et al., Ann Surg 2009;249: 617–623
+]
+
+
+
+---
+
+background-image: url("img/opal_pool_yellowstone.jpg")
+background-size: cover
+class: center, bottom, inverse
+
+## Pitfalls
+
+#### Opal pool, Yellowstone National Park, Wyoming
+
+---
+
+# Pitfall 1: Too much
+
+```{r, echo=FALSE, fig.height=7, fig.width=14}
+mets_raw <- here("docs", "mets_percentages.csv") %>% readr::read_csv()
+mets_long <- mets_raw %>% tidyr::pivot_longer(
+  Lung:Bones,
+  names_to = "Organ",
+  values_to = "Percentage"
+  ) %>% 
+  group_by(Primary) %>% 
+  mutate(rank = rank(Percentage)) %>% 
+  ungroup() %>% 
+  mutate(
+    Primary = as.factor(Primary),
+    Primary = forcats::fct_reorder(Primary, Percentage, .fun = sum)
+  )
+
+ggplot(mets_long, aes(x = Primary, y = Percentage, fill = Organ)) +
+  geom_bar(stat = "identity") +
+  xlab("Primary tumor") +
+  coord_flip() +
+  scale_fill_brewer(type = "div") +
+  theme_minimal() +
+  theme(
+    panel.grid.major.x = element_line(),
+    panel.grid.minor.x = element_line()
+  )
+```
+
+---
+
+# Pitfall: Too much - Organize
+
+```{r, echo=FALSE, fig.height=7, fig.width=14} 
+ggplot(mets_long, aes(x = reorder(Organ, rank), y = rank)) +
+  geom_boxplot() +
+  theme_minimal()
+```
+
+---
+
+# Pitfall: Too much - Simplify
+
+.center[
+```{r, echo=FALSE, fig.height=7, fig.width=9} 
+common_mets <- mets_long %>% 
+  group_by(Organ) %>% 
+  summarise(median_rank = median(rank)) %>% 
+  filter(median_rank > 5) %>% 
+  pull(Organ)
+
+mets_long %<>% mutate(
+  Frequency = ifelse(Organ %in% common_mets, "Common", "Rare")
+)
+
+ggplot_single <- function(df, filter_freq){
+  if(filter_freq == "Common"){
+    my_scale <- c(
+      "#c6dbef",
+      "#9ecae1",
+      "#6baed6",
+      "#4292c6",
+      "#2171b5",
+      "#084594"
+      )
+  } else {
+    my_scale <- c(
+      "#bcbddc",
+      "#9e9ac8",
+      "#807dba",
+      "#6a51a3",
+      "#4a1486"
+    )
+  }
+  ggplot(
+    df %>% filter(Frequency == filter_freq), 
+    aes(x = Primary, y = Percentage, fill = Organ)
+    ) +
+    geom_bar(stat = "identity") +
+    coord_flip() +
+    scale_fill_manual(values = my_scale) +
+    theme_minimal() +
+    theme(
+      panel.grid.major.x = element_line(),
+      panel.grid.minor.x = element_line(),
+      strip.background = element_blank(),
+      strip.text.x = element_blank(),
+      legend.position = "top",
+      legend.key.size = unit(1, "line"),
+      legend.title = element_blank(),
+      axis.title.x = element_blank(),
+      axis.title.y = element_blank()
+    )
+}
+p1 <- ggplot_single(mets_long, "Common") +
+  labs(
+    title = "Cumulative percentage* of
+      <span style='color:#084594'>common</span> and <span style='color:#4a1486'>rare</span> <br />sites of metastasis
+      for different primary tumors",
+    subtitle = "*percentages may add up to more than 100% due to multiple sites of metastases"
+  ) +
+  theme(plot.title = element_markdown(hjust = 0.5))
+p2 <- ggplot_single(mets_long, "Rare")
+pc <- ggpubr::ggarrange(p1, p2, nrow = 2) 
+
+pc
+```
+]
+Source: [Do et al., Radiology (2021)](https://doi.org/10.1148/radiol.2021210043)
+---
+
+# Pitfall 2: Scales
+
+![3 examples of dual-scale charts by Isenberg et al.](img/isenberg-fig1.png)
+.footnote[
+Source: Isenberg P, et al. A study on Dual-Scale data charts. [IEEE Trans Vis Comput Graph. 2011 Dec;17(12):2469–78](https://doi.org/10.1109/TVCG.2011.160).
+]
+
+---
+
+# Pitfall 2: Scales
+
+```{r, echo=FALSE, fig.align='center', out.width=780, out.height=400}
+knitr::include_graphics("img/isenberg-fig5.png")
+```
+
+.footnote[
+Source: Isenberg P, et al. A study on Dual-Scale data charts. [IEEE Trans Vis Comput Graph. 2011 Dec;17(12):2469–78](https://doi.org/10.1109/TVCG.2011.160).
+]
+
+---
+
+# Pitfall 2: Scales
+
+```{r, echo=FALSE, fig.align='center', out.width=780, out.height=400}
+knitr::include_graphics("img/isenberg-fig6.png")
+```
+
+.footnote[
+Source: Isenberg P, et al. A study on Dual-Scale data charts. [IEEE Trans Vis Comput Graph. 2011 Dec;17(12):2469–78](https://doi.org/10.1109/TVCG.2011.160).
+]
+
+---
+
+# Pitfall 2: Scales
+
+```{r, echo=FALSE, fig.align='center', out.width=780, out.height=400}
+knitr::include_graphics("img/isenberg-fig7.png")
+```
+
+.footnote[
+Source: Isenberg P, et al. A study on Dual-Scale data charts. [IEEE Trans Vis Comput Graph. 2011 Dec;17(12):2469–78](https://doi.org/10.1109/TVCG.2011.160).
+]
+
+---
+
+# Pitfall 2: Scales
+
+```{r, echo=FALSE, fig.align='center', out.width=780, out.height=400}
+knitr::include_graphics("img/isenberg-fig8.png")
+```
+
+.footnote[
+Source: Isenberg P, et al. A study on Dual-Scale data charts. [IEEE Trans Vis Comput Graph. 2011 Dec;17(12):2469–78](https://doi.org/10.1109/TVCG.2011.160).
+]
+---
+
+# Pitfall 2: Scales
+
+.center[
+```{r, echo=FALSE, fig.height=7, fig.width=10}
+ggplot(aes(x=rank, y=`2018 total pay`, color=gender), 
+       data=genderIR %>% arrange(desc(gender))) +
+  geom_boxplot() +
+  theme_classic() +
+  labs(y='Total payments (in USD)', x='Academic rank', color='Gender') +
+  scale_y_log10(labels = function(x) paste0(x, "$")) +
+  scale_color_manual(values=c('#e66101', '#5e3c99')) +
+  ggtitle("IR-Industry payments by rank and gender")
+```
+]
+
+---
+
+# Pitfall: Scales
+
+```{r, echo=FALSE, fig.height=4, fig.width=6}
+ggplot(aes(x=rank, y=`2018 total pay`, color=gender), 
+       data=genderIR %>% arrange(desc(gender))) +
+  geom_boxplot() +
+  theme_classic() +
+  labs(y='Total payments (in USD)', x='Academic rank', color='Gender') +
+  scale_y_continuous(labels = function(x) paste0(x, "$")) +
+  scale_color_manual(values=c('#e66101', '#5e3c99')) -> fig_genderpay
+fig_genderpay +
+  theme(legend.position = "none")
+```
+```{r, echo=FALSE, out.height=300, out.width=80}
+knitr::include_graphics(path = "img/genderIR_axis_bracket.png")
+```
+```{r, echo=FALSE, fig.height=4, fig.width=7}
+fig_genderpay +
+  coord_cartesian(ylim=c(0, 30000)) +
+  labs(y="")
+```
+
+.footnote[
+[Figure adapted from] Deipolyi AR, et al. Gender Disparity in Industry Relationships With Academic Interventional Radiology Physicians. <br /><br />
+[American Journal of Roentgenology. 2020 Apr 29:1-8](https://www.ajronline.org/doi/abs/10.2214/AJR.19.22176).
+]
+
+---
+
+# Pitfall 3: Pie charts (do not use them)
+
+- **Do not use pie charts**
+- Information always better depicted in other charts (e.g. bar or boxplot) or a table
+- Example: Malignant bone tumors in the 4<sup>th</sup> decade of life
+
+```{r, echo=FALSE, fig.height=5}
+bone_pie <- bone_tumors %>% filter(dign=="malignant", decade == 4)
+pie(bone_pie$percent, labels = bone_pie$tumor)
+```
+```{r, echo=FALSE, fig.height=5}
+ggplot(data = bone_pie, aes(y = percent, x = reorder(tumor, -percent))) +
+  geom_bar(stat="identity") +
+  theme_minimal() +
+  scale_y_continuous(labels = function(x) paste0(x, "%")) +
+  coord_flip() +
+  labs(x = "", y = "")
+```
+
+---
+
+# The only acceptable pie chart
+
+![Pie chart rectal bleeding by @MonaChalabi](img/rectal_bleeding_by-at-MonaChalabi.jpeg)
+Source: [@MonaChalabi](https://twitter.com/monachalabi/status/943875732241047553)
+
+---
 ```{r echo=FALSE}
 xaringanExtra::style_panelset_tabs(
   active_foreground = "#000000",
@@ -642,26 +1039,47 @@ xaringanExtra::style_panelset_tabs(
 # Pitfalls
 
 .panelset[
+
+.panel[.panel-name[Know Your Audience]
+
+.pull-left[
+- Font type and size:
+  - Look up font type of journal
+  - Hi-res figure on screen will look different than actual size in journal (zoom out or in as needed, use a ruler)
+  - Zoom presentation needs bigger font than in lecture hall
+  
+- Approx. 8% of male and 0.5% of female readers will be colorblind
+  - Do use a colorblind-friendly palette<sup>1</sup>
+]
+
+.footnote[
+  `r paste0(rep("<br />", 50), collapse = "")`
+  [1] You can use the online tools [colorbrewer2.org](https://colorbrewer2.org/) or [coolors.co](https://coolors.co/generate)
+  ]
+  
+.pull-right[
+- Typical  resolution "dots per inch" (dpi)
+  - MacBook Retina screen 220 dpi
+  - iPhone 326 dpi
+  - Print: Graphics ~600 dpi
+  - Print: Line plots (dataviz) ~1200 dpi
+  
+```{r, echo=FALSE, fig.height=3}
+library(RColorBrewer)
+display.brewer.all(select = c("RdBu", "BrBG", "PuOr"))
+# Arbitrary subset of: display.brewer.all(colorblindFriendly = TRUE)
+```
+]
+]
+
 .panel[.panel-name[Too many colors and shapes]
 .pull-left[
 - Don't use too many colors, point shapes, 3D etc.
-
 - Split up overloaded graphs into subfigures
-
-- Do use a colorblind-friendly palette<sup>1</sup>
-
-  .footnote[
-  `r paste0(rep("<br />", 15), collapse = "")`
-  [1] You can use the online tools [colorbrewer2.org](https://colorbrewer2.org/) or [coolors.co](https://coolors.co/generate)
-  ]
-```{r, echo=FALSE, fig.height=3}
-library(RColorBrewer)
-display.brewer.all(select = c("RdBu", "BrBG", "Spectral"))
-```
-
+![Stackoverflow screenshot of abhorrent 3D chart](img/stackoverflow_q.jpg)
 ]
 .pull-right[
-![Stackoverflow screenshot on how to recreate abhorrent 3D chart](img/stackoverflow_q.jpg)
+![Figure metastatic cancer spread panels](img/plot_mets_final.png)
 ]
 ]
 
@@ -792,6 +1210,7 @@ ggplot(
 - Scherer, Cédric. [Up-to-date ggplot2 tutorial](https://cedricscherer.netlify.app/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/)
 
 - `r twitter` [@W_R_Chase](https://twitter.com/W_R_Chase) [@EdwardTufte](https://twitter.com/EdwardTufte) 
+[@Jamie_Bio](https://twitter.com/Jamie_Bio)
 
 - <svg xmlns="http://www.w3.org/2000/svg" style="height:0.8em;top:.04em;position:relative;" viewBox="-4.771 0.104 53.521 44.858"><path fill="#FFF" d="M29.909 35.89c-1.999 1.997-5.218 2.382-7.921 2.382-2.7 0-5.922-.385-7.918-2.382M36.021 4.276L25.899 1.894l-3.93 11.996L25.9 1.894m18.241 3.201a3.99 3.99 0 1 1-7.98 0 3.991 3.991 0 0 1 7.98 0zm.661 23.906c0 8.262-10.263 14.961-22.922 14.961-12.66 0-22.922-6.698-22.922-14.961 0-8.262 10.262-14.961 22.922-14.961 12.659 0 22.922 6.698 22.922 14.961zM-.744 26.676a5.061 5.061 0 0 1-3.027-4.636 5.06 5.06 0 0 1 8.935-3.257m33.568.103a5.061 5.061 0 0 1 9.018 3.154 5.064 5.064 0 0 1-3.23 4.72"/><path d="M21.879 44.963c-13.191 0-23.922-7.16-23.922-15.961 0-.608.051-1.21.151-1.801a6.066 6.066 0 0 1-2.879-5.161 6.068 6.068 0 0 1 6.06-6.061c1.493 0 2.916.546 4.017 1.522 4.149-2.663 9.73-4.339 15.887-4.455L25.235.71l.882.208.021.005 9.421 2.218A5 5 0 0 1 40.151.105a4.996 4.996 0 0 1 4.99 4.991 4.996 4.996 0 0 1-4.99 4.99 4.995 4.995 0 0 1-4.99-4.984l-8.596-2.024-3.273 9.99c5.933.231 11.291 1.912 15.291 4.517a6.028 6.028 0 0 1 4.108-1.605 6.068 6.068 0 0 1 6.061 6.061 6.019 6.019 0 0 1-3.08 5.28c.087.553.132 1.113.132 1.681-.002 8.801-10.734 15.961-23.925 15.961zM.157 27.11a9.05 9.05 0 0 0-.2 1.892c0 7.699 9.834 13.961 21.922 13.961 12.088 0 21.922-6.263 21.922-13.961 0-.612-.062-1.215-.183-1.807a1.003 1.003 0 0 1-.099-.435c-.669-2.627-2.494-5.012-5.13-6.934a.992.992 0 0 1-.429-.304c-4.007-2.755-9.732-4.482-16.081-4.482-6.285 0-11.961 1.693-15.962 4.401a1.022 1.022 0 0 1-.401.279C2.823 21.643.951 24.044.256 26.694a.992.992 0 0 1-.084.384c-.005.011-.009.022-.015.032zm40.097-8.319c2.319 1.855 4.021 4.064 4.891 6.488a4.033 4.033 0 0 0 1.605-3.239 4.065 4.065 0 0 0-4.061-4.061 4.04 4.04 0 0 0-2.435.812zm-38.965-.812a4.065 4.065 0 0 0-4.06 4.061c0 1.213.54 2.34 1.436 3.1.899-2.405 2.618-4.596 4.946-6.433a4.066 4.066 0 0 0-2.322-.728zM40.15 2.104c-1.648 0-2.99 1.342-2.99 2.991s1.342 2.99 2.99 2.99 2.99-1.341 2.99-2.99-1.341-2.991-2.99-2.991zM21.988 39.271c-4.005 0-6.827-.875-8.626-2.675a1 1 0 0 1 1.415-1.414c1.405 1.405 3.763 2.089 7.211 2.089 3.447 0 5.807-.684 7.214-2.089a.999.999 0 1 1 1.413 1.414c-1.801 1.8-4.622 2.675-8.627 2.675z"/><path fill="#FF4500" d="M30.097 22.35c-2.038 0-3.749 1.707-3.749 3.745 0 2.037 1.711 3.688 3.749 3.688s3.688-1.651 3.688-3.688c0-2.038-1.651-3.745-3.688-3.745zm-16.158 0c-2.036 0-3.745 1.709-3.745 3.745s1.708 3.688 3.745 3.688 3.688-1.652 3.688-3.688-1.652-3.745-3.688-3.745z"/></svg> <https://www.reddit.com/r/dataisbeautiful/>
 
@@ -799,10 +1218,13 @@ ggplot(
 
 class: center, middle
 
-# Thanks!
+## Thank you for your attention
 
-[`r twitter`@dr_becker](https://twitter.com/dr_becker) / [beckera1@mskcc.org](mailto:beckera1@mskcc.org)
+[`r twitter`@Anton Becker](https://twitter.com/dr_becker) / [beckera1@mskcc.org](mailto:beckera1@mskcc.org)
 
 Slides created via the R package [**xaringan**](https://github.com/yihui/xaringan).
 
 Also powered by [remark.js](https://remarkjs.com), [knitr](http://yihui.org/knitr), [R Markdown](https://rmarkdown.rstudio.com) and [xaringanExtra](https://github.com/gadenbuie/xaringanExtra).
+
+
+Thanks to [`r twitter`@Mithat Gönen](https://twitter.com/gonen_mithat), [`r twitter`@Richard Do](https://twitter.com/DrRichardDo), [`r twitter`@Yihui Xie](https://twitter.com/xieyihui), [`r twitter`@Garrick Aden-Buie](https://twitter.com/grrrck)
