Small title changes

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1038,7 +1038,7 @@ class: animated fadeIn
 ---
 class: animated rollIn
 
-# Case study: Clean up
+# Case study: Time axis from left to right
 
 <img src="img/bone_tumors_2.png", alt="Bone tumor incidence over life decades from Freyschmidt (2010), p.12", style="width:500px; display:block;  margin-left: auto; margin-right: auto;
 ">
@@ -1046,7 +1046,7 @@ class: animated rollIn
 ---
 class: animated slideIn
 
-# Case study: Clean up
+# Case study: Colorize/label
 
 ```{r, echo=FALSE, fig.align='center', fig.width=9}
 fig_bone_base <- ggplot(bone_tumors, aes(x = decade, y = percent, fill = tumor_fct)) +
